<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="12dp"
    tools:context=".AdderActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="serif-monospace"
                    android:maxLines="1"
                    android:text="@string/date_format"
                    android:textColor="@color/hint_tv_color"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/editTextDt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/shadow_back_down"
                    android:hint="@string/_10_11_2023"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:minHeight="45dp"
                    android:padding="8dp"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="serif-monospace"
                    android:maxLines="1"
                    android:text="@string/time_format"
                    android:textColor="@color/hint_tv_color"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/editTextTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/shadow_back_down"
                    android:hint="@string/_10_25"
                    android:importantForAutofill="no"
                    android:inputType="none"
                    android:minHeight="45dp"
                    android:padding="8dp"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="serif-monospace"
                    android:maxLines="1"
                    android:text="@string/sys_pressure_mm_hg"
                    android:textColor="@color/hint_tv_color"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/editTextSysPressure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/shadow_back_down"
                    android:hint="@string/_60"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:minHeight="45dp"
                    android:padding="8dp"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="serif-monospace"
                    android:maxLines="1"
                    android:text="@string/dys_pressure_mm_hg"
                    android:textColor="@color/hint_tv_color"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/editTextDysPressure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/shadow_back_down"
                    android:hint="@string/_60"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:minHeight="45dp"
                    android:padding="8dp"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="serif-monospace"
                    android:maxLines="1"
                    android:text="@string/heart_rate_bpm"
                    android:textColor="@color/hint_tv_color"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/editTextHeartRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/shadow_back_down"
                    android:hint="@string/_70"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:minHeight="45dp"
                    android:padding="8dp"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="serif-monospace"
                    android:maxLines="1"
                    android:text="@string/comment"
                    android:textColor="@color/hint_tv_color"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/editTextComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/shadow_back_down"
                    android:hint="@string/enter_any_message"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="45dp"
                    android:minLines="2"
                    android:padding="8dp"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />

            </LinearLayout>

            <android.widget.Button
                android:id="@+id/buttonSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/save"
                app:layout_constraintWidth_percent="0.3"
                android:background="@drawable/button_ripple_back"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
