<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:id="@+id/constraintLayoutLogin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:contentDescription="@string/message_icon"
                android:src="@drawable/ic_baseline_message_24"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/textViewAboutOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/verification_message_dummy"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:textSize="18sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/editTextStyle2"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextOTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/otp"
                    android:inputType="number"
                    android:textColor="@color/textColor"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <android.widget.Button
                android:id="@+id/buttonVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:padding="8dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:layout_marginTop="16dp"
                android:text="@string/verify"
                android:textColor="@color/white"
                android:background="@drawable/scarlet_background"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
