<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsPage">

    <ScrollView
        android:id="@+id/scroll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <GridLayout
                android:id="@+id/grid1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="3">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:background="@color/teal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:contentDescription="@string/date_logo"
                            android:src="@drawable/date2" />

                        <TextView
                            android:id="@+id/DetailsDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:textColor="@color/white"
                            android:text="@string/date"
                            android:textAlignment="center"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:fontFamily="serif"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:background="@color/teal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:contentDescription="@string/clock_logo"
                            android:src="@drawable/clock2" />

                        <TextView
                            android:id="@+id/DetailsTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:text="@string/time"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:fontFamily="serif"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:id="@+id/layoutSys"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:background="@color/teal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:textColor="@color/white"
                            android:id="@+id/tvIndicator1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            tools:text="status 1"
                            android:textSize="16sp"
                            android:padding="4dp"
                            android:background="@drawable/details_round"
                            android:backgroundTint="@color/black"
                            android:fontFamily="serif"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/systolic_pressure"
                            android:src="@drawable/sys_pressure2" />

                        <TextView
                            android:id="@+id/DetailsSysPressure"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:textColor="@color/white"
                            tools:text="sys"
                            android:textAlignment="center"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:fontFamily="serif"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:id="@+id/layoutDys"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:background="@color/teal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:textColor="@color/white"
                            android:id="@+id/tvIndicator2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            tools:text="status 1"
                            android:textSize="16sp"
                            android:padding="4dp"
                            android:background="@drawable/details_round"
                            android:backgroundTint="@color/black"
                            android:fontFamily="serif"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/dys_pressure"
                            android:src="@drawable/dys_pressure2" />

                        <TextView
                            android:id="@+id/DetailsDysPressure"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            tools:text="dys"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:fontFamily="serif"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:id="@+id/layoutHeartRate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:background="@color/teal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:textColor="@color/white"
                            android:id="@+id/tvIndicator3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            tools:text="status 1"
                            android:textSize="16sp"
                            android:padding="4dp"
                            android:background="@drawable/details_round"
                            android:backgroundTint="@color/black"
                            android:fontFamily="serif"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/heart_rate"
                            android:src="@drawable/heart_beat2" />

                        <TextView
                            android:id="@+id/DetailsHeartRate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:textColor="@color/white"
                            tools:text="beat"
                            android:textAlignment="center"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:fontFamily="serif"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </GridLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/grid1"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#0c3478"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/comment"
                        android:src="@drawable/comment2" />

                    <TextView
                        android:id="@+id/DetailsComment"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/comment"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
